# mtg-tagger

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  claude_utils.py  main.py  oauth_manager.py  oauth_routes.py  prompt.md  pyproject.toml  render.yaml  test_app.py
analysis/: accuracy-report.qmd  add_missing_cards.py  analyze_batch.py  load_labeled2.py  load_labeled_kf.R  mechanics.md  meta-report.qmd  render_accuracy_report.R  render_meta_report.R  reset_cards.py  run_all_combos.sh  validation-report.qmd
prompts/: README.md  feedback_prompt.md  prompt.md  prompt11.md  prompt12.md  prompt2.md  prompt3.md  prompt4.md  prompt5.md  prompt6.md  prompt7.md  prompt8.md  prompt9.md
static/: app.js  style.css
templates/: index.html
