[tool.setuptools]
packages = []

[project]
name = "mtg-tagger"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.79.0",
    "flask>=3.1.2",
    "authlib>=1.3.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "gunicorn>=22.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
